k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-service
spec:
  selector:
    app: podinfo
  ports:
    - protocol: TCP
      port: 8081     # Externally exposed port
      targetPort: 9898
